// Vitest Snapshot v1

exports[`PostView > first post 1`] = `
"<main class=\\"post-view\\" data-v-5298551c=\\"\\">
  <div class=\\"post-container\\" data-v-a0662bbd=\\"\\" data-v-5298551c=\\"\\">
    <h1 data-v-a0662bbd=\\"\\">First</h1>
    <div class=\\"image-container\\" data-v-a0662bbd=\\"\\"><img class=\\"post-image\\" data-v-a0662bbd=\\"\\" src=\\"/images/first_image.png\\" alt=\\"first post\\">
      <!--v-if-->
      <!--v-if-->
    </div>
    <p data-v-a0662bbd=\\"\\">first post</p>
  </div>
</main>"
`;

exports[`PostView > navigation buttons 1`] = `
"<main class=\\"post-view\\" data-v-5298551c=\\"\\">
  <div class=\\"post-container\\" data-v-a0662bbd=\\"\\" data-v-5298551c=\\"\\">
    <h1 data-v-a0662bbd=\\"\\">First</h1>
    <div class=\\"image-container\\" data-v-a0662bbd=\\"\\"><img class=\\"post-image\\" data-v-a0662bbd=\\"\\" src=\\"/images/first_image.png\\" alt=\\"first post\\">
      <!--v-if-->
      <div class=\\"side-navigation side-navigation-right\\" data-v-a0662bbd=\\"\\">
        <font-awesome-icon-stub icon=\\"fa-solid fa-chevron-right\\" data-v-a0662bbd=\\"\\"></font-awesome-icon-stub>
      </div>
    </div>
    <p data-v-a0662bbd=\\"\\">first post</p>
  </div>
</main>"
`;

exports[`PostView > navigation buttons 2`] = `
"<main class=\\"post-view\\" data-v-5298551c=\\"\\">
  <div class=\\"post-container\\" data-v-a0662bbd=\\"\\" data-v-5298551c=\\"\\">
    <!--v-if-->
    <div class=\\"image-container\\" data-v-a0662bbd=\\"\\"><img class=\\"post-image\\" data-v-a0662bbd=\\"\\" src=\\"/images/nameless_image.gif\\" alt=\\"nameless post\\">
      <div class=\\"side-navigation side-navigation-left\\" data-v-a0662bbd=\\"\\">
        <font-awesome-icon-stub icon=\\"fa-solid fa-chevron-left\\" data-v-a0662bbd=\\"\\"></font-awesome-icon-stub>
      </div>
      <div class=\\"side-navigation side-navigation-right\\" data-v-a0662bbd=\\"\\">
        <font-awesome-icon-stub icon=\\"fa-solid fa-chevron-right\\" data-v-a0662bbd=\\"\\"></font-awesome-icon-stub>
      </div>
    </div>
    <p data-v-a0662bbd=\\"\\">nameless post</p>
  </div>
</main>"
`;

exports[`PostView > navigation buttons 3`] = `
"<main class=\\"post-view\\" data-v-5298551c=\\"\\">
  <div class=\\"post-container\\" data-v-a0662bbd=\\"\\" data-v-5298551c=\\"\\">
    <h1 data-v-a0662bbd=\\"\\">Last</h1>
    <div class=\\"image-container\\" data-v-a0662bbd=\\"\\"><img class=\\"post-image\\" data-v-a0662bbd=\\"\\" src=\\"/images/last_image.png\\" alt=\\"last post\\">
      <div class=\\"side-navigation side-navigation-left\\" data-v-a0662bbd=\\"\\">
        <font-awesome-icon-stub icon=\\"fa-solid fa-chevron-left\\" data-v-a0662bbd=\\"\\"></font-awesome-icon-stub>
      </div>
      <!--v-if-->
    </div>
    <p data-v-a0662bbd=\\"\\">last post</p>
  </div>
</main>"
`;
